tests/__snapshots__/api-toBeConstructableWith-overload-signatures-stderr.snap.txt
Error: Expression is constructable with the given arguments.

  27 |   test("is constructable with the given argument", () => {
  28 |     expect(Point).type.toBeConstructableWith(3, 4);
  29 |     expect(Point).type.not.toBeConstructableWith(3, 4); // fail
     |                            ~~~~~~~~~~~~~~~~~~~~~
  30 |   });
  31 | 
  32 |   test("is constructable with the given arguments", () => {

       at ./__typetests__/overload-signatures.tst.ts:29:28 ❭ when target is an expression ❭ is constructable with the given argument

Error: Expression is not constructable with the given arguments.

Expected 1-2 arguments, but got 3.

  31 | 
  32 |   test("is constructable with the given arguments", () => {
  33 |     expect(Point).type.toBeConstructableWith(4, 5, 6);
     |                                                    ~
  34 |     expect(Point).type.not.toBeConstructableWith(4, 5, 6); // fail
  35 | 
  36 |     expect(Test).type.toBeConstructableWith("one", () => {});

       at ./__typetests__/overload-signatures.tst.ts:33:52

Error: Expression is not constructable with the given arguments.

Argument of type '() => void' is not assignable to parameter of type '() => Promise<unknown>'.
Type 'void' is not assignable to type 'Promise<unknown>'.

  34 |     expect(Point).type.not.toBeConstructableWith(4, 5, 6); // fail
  35 | 
  36 |     expect(Test).type.toBeConstructableWith("one", () => {});
     |                                                    ~~~~~~~~
  37 |     expect(Test).type.not.toBeConstructableWith("one", () => {}); // fail
  38 | 
  39 |     expect(Test).type.toBeConstructableWith("two", () => Promise.resolve());

       at ./__typetests__/overload-signatures.tst.ts:36:52

    The call would have succeeded against this implementation, but implementation signatures of overloads are not externally visible. ts(2793)

      18 | 
      19 |   constructor(name: string, cb: () => Promise<unknown>);
      20 |   constructor(name: string, cb: () => unknown) {
         |   ~~~~~~~~~~~
      21 |     this.name = name;
      22 |     this.cb = cb;
      23 |   }

           at ./__typetests__/overload-signatures.tst.ts:20:3

Error: Expression is constructable with the given arguments.

  38 | 
  39 |     expect(Test).type.toBeConstructableWith("two", () => Promise.resolve());
  40 |     expect(Test).type.not.toBeConstructableWith("two", () => Promise.resolve()); // fail
     |                           ~~~~~~~~~~~~~~~~~~~~~
  41 |   });
  42 | 
  43 |   test("is not constructable without arguments", () => {

       at ./__typetests__/overload-signatures.tst.ts:40:27 ❭ when target is an expression ❭ is constructable with the given arguments

Error: Expression is not constructable without arguments.

Expected 1-2 arguments, but got 0.

  43 |   test("is not constructable without arguments", () => {
  44 |     expect(Point).type.not.toBeConstructableWith();
  45 |     expect(Point).type.toBeConstructableWith(); // fail: Expected 1-3 arguments, but got 0.
     |                        ~~~~~~~~~~~~~~~~~~~~~
  46 | 
  47 |     expect(Test).type.not.toBeConstructableWith();
  48 |     expect(Test).type.toBeConstructableWith(); // fail: Expected 2 arguments, but got 0.

       at ./__typetests__/overload-signatures.tst.ts:45:24 ❭ when target is an expression ❭ is not constructable without arguments

    An argument for 'xy' was not provided. ts(6210)

       6 | 
       7 |   constructor(x: number, y: number);
       8 |   constructor(xy: string);
         |               ~~~~~~~~~~
       9 |   constructor(x: string | number, y?: number) {
      10 |     this.x = x;
      11 |     this.y = y;

           at ./__typetests__/overload-signatures.tst.ts:8:15

Error: Expression is not constructable without arguments.

Expected 2 arguments, but got 0.

  46 | 
  47 |     expect(Test).type.not.toBeConstructableWith();
  48 |     expect(Test).type.toBeConstructableWith(); // fail: Expected 2 arguments, but got 0.
     |                       ~~~~~~~~~~~~~~~~~~~~~
  49 |   });
  50 | 
  51 |   test("is not constructable with the given argument", () => {

       at ./__typetests__/overload-signatures.tst.ts:48:23 ❭ when target is an expression ❭ is not constructable without arguments

    An argument for 'name' was not provided. ts(6210)

      17 |   cb: () => unknown | Promise<unknown>;
      18 | 
      19 |   constructor(name: string, cb: () => Promise<unknown>);
         |               ~~~~~~~~~~~~
      20 |   constructor(name: string, cb: () => unknown) {
      21 |     this.name = name;
      22 |     this.cb = cb;

           at ./__typetests__/overload-signatures.tst.ts:19:15

Error: Expression is not constructable with the given argument.

Expected 2 arguments, but got 1.

  51 |   test("is not constructable with the given argument", () => {
  52 |     expect(Test).type.not.toBeConstructableWith("nope");
  53 |     expect(Test).type.toBeConstructableWith("nope"); // fail: Expected 2 arguments, but got 1.
     |                                             ~~~~~~
  54 |   });
  55 | 
  56 |   test("is not constructable with the given arguments", () => {

       at ./__typetests__/overload-signatures.tst.ts:53:45

    An argument for 'cb' was not provided. ts(6210)

      17 |   cb: () => unknown | Promise<unknown>;
      18 | 
      19 |   constructor(name: string, cb: () => Promise<unknown>);
         |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~
      20 |   constructor(name: string, cb: () => unknown) {
      21 |     this.name = name;
      22 |     this.cb = cb;

           at ./__typetests__/overload-signatures.tst.ts:19:29

Error: Expression is constructable with the given arguments.

  55 | 
  56 |   test("is not constructable with the given arguments", () => {
  57 |     expect(Point).type.not.toBeConstructableWith(2, 3);
     |                            ~~~~~~~~~~~~~~~~~~~~~
  58 |     expect(Point).type.toBeConstructableWith(2, 3); // fail: No overload expects 2 arguments, but overloads do exist that expect either 1 or 3 arguments.
  59 | 
  60 |     expect(Point).type.not.toBeConstructableWith(4, 5, 6, 7);

       at ./__typetests__/overload-signatures.tst.ts:57:28 ❭ when target is an expression ❭ is not constructable with the given arguments

Error: Expression is not constructable with the given arguments.

Expected 1-2 arguments, but got 4.

  59 | 
  60 |     expect(Point).type.not.toBeConstructableWith(4, 5, 6, 7);
  61 |     expect(Point).type.toBeConstructableWith(4, 5, 6, 7); // fail: Expected 1-3 arguments, but got 4.
     |                                                    ~~~~
  62 |   });
  63 | });
  64 | 

       at ./__typetests__/overload-signatures.tst.ts:61:52

